# rusty-finance-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
k8s/: api.yml  ingress.yml
src/: controller.rs  finance.rs  main.rs  models.rs
